# shortified

./: Cargo.toml  README.md  url_shortener.db
src/: database.rs  main.rs  site.rs
static/: index.html  style.css
