[package]
name = "url_shortner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
diesel = "2.1.4"
log = "0.4.20"
rocket = "0.5.0-rc.3"
rusqlite = "0.30.0"
sha2 = "0.10.8"
urlencoding = "2.1.3"
